--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
         background: #fdf6f0;
         color: #4e2e1d;
       }
-      #beranda {
-        margin-top: 250px; /* Menambahkan ruang untuk konten beranda agar tidak tertutup header */
-      }
 
       header {
         background: #7b3f00;
@@ -48,18 +45,12 @@
 
       section {
         padding: 40px 20px;
-
         border-bottom: 1px solid #d8b08c;
+        scroll-margin-top: 120px; /* Biar tidak tertutup header */
       }
 
       h2 {
         color: #703000;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-        max-width: 400px;
       }
 
       footer {
@@ -69,7 +60,6 @@
         padding: 10px;
       }
 
-      /* WhatsApp Button */
       .whatsapp-button {
         position: fixed;
         bottom: 20px;
@@ -94,7 +84,7 @@
       <h1>Susu Coklat King Gembira</h1>
       <nav>
         <ul>
-          <li><a href="#beranda">Beranda</a></li>
+          <li><a href="#beranda">Selamat Datang</a></li>
           <li><a href="#tentang">Tentang Kami</a></li>
           <li><a href="#produk">Produk Susu</a></li>
           <li><a href="#nutrisi">Informasi Nutrisi</a></li>
@@ -120,20 +110,27 @@
     <section id="produk">
       <h2>Produk Susu</h2>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Susu Coklat Botol 250ml</li>
+        <li>Susu Coklat UHT 1L</li>
+        <li>Susu Coklat Bubuk Sachet</li>
       </ul>
     </section>
 
     <section id="nutrisi">
       <h2>Informasi Nutrisi</h2>
-      <p></p>
+      <p>
+        Susu kami mengandung kalsium tinggi, protein, vitamin D, dan mineral
+        penting lainnya yang baik untuk pertumbuhan dan energi harian.
+      </p>
     </section>
 
     <section id="edukasi">
       <h2>Edukasi</h2>
-      <p></p>
+      <p>
+        Tahukah Anda? Minum susu coklat setelah olahraga bisa membantu pemulihan
+        otot lebih baik karena kandungan protein dan karbohidratnya yang
+        seimbang.
+      </p>
     </section>
 
     <section id="kontak">
@@ -150,7 +147,6 @@
       <p>© 2025 Susu Coklat Gembira. Semua Hak Dilindungi.</p>
     </footer>
 
-    <!-- WhatsApp Button -->
     <a
       href="https://wa.me/0857727717373"
       class="whatsapp-button"
