--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       section {
         padding: 40px 20px;
         border-bottom: 1px solid #d8b08c;
-        scroll-margin-top: 120px; /* Biar tidak tertutup header */
+        scroll-margin-top: 150px; /* Perbaikan scroll-margin-top */
       }
 
       h2 {
