--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         color: #4e2e1d;
       }
 
+      html {
+        scroll-behavior: smooth; /* Menambahkan efek smooth scrolling */
+      }
+
       header {
         background: #7b3f00;
         color: white;
@@ -27,26 +31,24 @@
       nav ul {
         list-style: none;
         padding: 0;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-top: 10px;
+        margin: 0;
       }
 
       nav ul li {
-        margin: 10px;
+        display: inline;
+        margin-right: 20px;
       }
 
       nav ul li a {
         color: white;
         text-decoration: none;
-        font-weight: bold;
+        font-size: 16px;
       }
 
       section {
         padding: 40px 20px;
         border-bottom: 1px solid #d8b08c;
-        scroll-margin-top: 150px; /* Perbaikan scroll-margin-top */
+        margin-top: 120px; /* Menambahkan margin-top agar konten tidak tertutup header */
       }
 
       h2 {
@@ -58,6 +60,9 @@
         color: white;
         text-align: center;
         padding: 10px;
+        position: relative;
+        bottom: 0;
+        width: 100%;
       }
 
       .whatsapp-button {
@@ -153,5 +158,22 @@
       target="_blank"
       >💬</a
     >
+
+    <script>
+      // JavaScript untuk penyesuaian scroll
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+
+          const targetId = this.getAttribute("href").substring(1);
+          const targetElement = document.getElementById(targetId);
+
+          window.scrollTo({
+            top: targetElement.offsetTop - 120, // Menyesuaikan dengan tinggi header
+            behavior: "smooth",
+          });
+        });
+      });
+    </script>
   </body>
 </html>
