--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
       }
 
       html {
-        scroll-behavior: smooth; /* Menambahkan efek smooth scrolling */
+        scroll-behavior: smooth;
       }
 
       header {
         background: #7b3f00;
         color: white;
         padding: 20px;
-        text-align: center;
+        text-align: left;
+        padding-left: 20px;
         position: fixed;
         width: 100%;
         top: 0;
         z-index: 100;
+      }
+
+      header h1 {
+        margin-left: 0;
+        text-align: left;
       }
 
       nav ul {
@@ -48,7 +54,7 @@
       section {
         padding: 40px 20px;
         border-bottom: 1px solid #d8b08c;
-        margin-top: 120px; /* Menambahkan margin-top agar konten tidak tertutup header */
+        margin-top: 120px;
       }
 
       h2 {
@@ -160,7 +166,6 @@
     >
 
     <script>
-      // JavaScript untuk penyesuaian scroll
       document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
         anchor.addEventListener("click", function (e) {
           e.preventDefault();
@@ -169,7 +174,7 @@
           const targetElement = document.getElementById(targetId);
 
           window.scrollTo({
-            top: targetElement.offsetTop - 120, // Menyesuaikan dengan tinggi header
+            top: targetElement.offsetTop - 120,
             behavior: "smooth",
           });
         });
