--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Susu Coklat Gembira</title>
+    <title>Susu Coklat king Gembira</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -121,26 +121,23 @@
     <section id="produk">
       <h2>Produk Susu</h2>
       <ul>
-        <li>Susu Coklat Botol 250ml</li>
-        <li>Susu Coklat UHT 1L</li>
-        <li>Susu Coklat Bubuk Sachet</li>
+        <li>Susu Botol 250ml</li>
       </ul>
     </section>
 
     <section id="nutrisi">
       <h2>Informasi Nutrisi</h2>
       <p>
-        Susu kami mengandung kalsium tinggi, protein, vitamin D, dan mineral
-        penting lainnya yang baik untuk pertumbuhan dan energi harian.
+        Energi: ±150–200 kkal Protein: ±5 gram Kalsium: ±200–300 mg Karbohidrat:
+        ±25 gram Lemak: ±3 gram Vitamin D & A:
       </p>
     </section>
 
     <section id="edukasi">
       <h2>Edukasi</h2>
       <p>
-        Tahukah Anda? Minum susu coklat setelah olahraga bisa membantu pemulihan
-        otot lebih baik karena kandungan protein dan karbohidratnya yang
-        seimbang.
+        Tahukah Anda? Minuman susu yang mengandung protein dan karbohidrat bisa
+        membantu mengisi kembali energi setelah beraktivitas.
       </p>
     </section>
 
