--- a/index.html
+++ b/index.html
@@ -128,9 +128,19 @@
     <section id="nutrisi">
       <h2>Informasi Nutrisi</h2>
       <p>
-        Energi: ±150–200 kkal Protein: ±5 gram Kalsium: ±200–300 mg Karbohidrat:
-        ±25 gram Lemak: ±3 gram Vitamin D & A:
+        Energi: ±150–200 kkal Protein: ±5 gram Kalsium: ±200–300 mg
+        Karbohidrat:±25 gram Lemak: ±3 gram Vitamin D & A:
       </p>
+      <br />
+      <p>Protein: ±5 gram</p>
+      <br />
+      <p>Kalsium: ±200–300 mg</p>
+      <br />
+      <p>Karbohidrat:±25 gram</p>
+      <br />
+      <p>Lemak: ±3 gram</p>
+      <br />
+      <p>Vitamin D & A</p>
     </section>
 
     <section id="edukasi">
