--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
 
     <section id="nutrisi">
       <h2>Informasi Nutrisi</h2>
-      <p>
-        Energi: ±150–200 kkal Protein: ±5 gram Kalsium: ±200–300 mg
-        Karbohidrat:±25 gram Lemak: ±3 gram Vitamin D & A:
-      </p>
+      <p>Energi: ±150–200 kkal</p>
       <br />
       <p>Protein: ±5 gram</p>
       <br />
