--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
       <h2>Kontak & Pemesanan</h2>
       <p>
         WhatsApp:
-        <a href="https://wa.me/0857727717373" target="_blank"
-          >0857-7277-17373</a
-        >
+        <a href="https://wa.me/085772771373" target="_blank">0857-7277-17373</a>
       </p>
     </section>
 
@@ -186,10 +184,7 @@
       <p>© 2025 Susu Coklat Gembira. Semua Hak Dilindungi.</p>
     </footer>
 
-    <a
-      href="https://wa.me/0857727717373"
-      class="whatsapp-button"
-      target="_blank"
+    <a href="https://wa.me/085772771373" class="whatsapp-button" target="_blank"
       >💬</a
     >
 
@@ -209,7 +204,7 @@
 
       function kirimPesanWhatsApp(produk) {
         const jumlah = document.getElementById("jumlah").value || 1;
-        const nomorWA = "0857727717373";
+        const nomorWA = "085772771373";
         const pesan = `Halo! Saya ingin memesan:\nProduk: ${produk}\nJumlah: ${jumlah}`;
         const link = `https://wa.me/${nomorWA}?text=${encodeURIComponent(
           pesan
