--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <h2>Kontak & Pemesanan</h2>
       <p>
         WhatsApp:
-        <a href="https://wa.me/625772771373" target="_blank">0857-7277-1373</a>
+        <a href="https://wa.me/6285772771373" target="_blank">0857-7277-1373</a>
       </p>
     </section>
 
@@ -184,7 +184,10 @@
       <p>© 2025 Susu Coklat Gembira. Semua Hak Dilindungi.</p>
     </footer>
 
-    <a href="https://wa.me/625772771373" class="whatsapp-button" target="_blank"
+    <a
+      href="https://wa.me/6285772771373"
+      class="whatsapp-button"
+      target="_blank"
       >💬</a
     >
 
@@ -204,7 +207,7 @@
 
       function kirimPesanWhatsApp(produk) {
         const jumlah = document.getElementById("jumlah").value || 1;
-        const nomorWA = "625772771373";
+        const nomorWA = "6285772771373";
         const pesan = `Halo! Saya ingin memesan:\nProduk: ${produk}\nJumlah: ${jumlah}`;
         const link = `https://wa.me/${nomorWA}?text=${encodeURIComponent(
           pesan
