--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Susu Coklat Gembira</title>
+    <link rel="icon" type="susu" href="susu.png" />
     <style>
+      footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 0;
+        background-color: #f1f1f1;
+      }
+
+      .footer-content {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 80%;
+      }
+
+      .logo {
+        width: 40px; /* Sesuaikan dengan ukuran logo */
+        height: auto;
+      }
+
+      p {
+        margin: 0;
+        font-size: 16px;
+      }
+
       body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -181,7 +207,11 @@
     </section>
 
     <footer>
-      <p>© 2025 Susu Coklat Gembira. Semua Hak Dilindungi.</p>
+      <div class="footer-content">
+        <img src="susu.png" alt="Logo Kiri" class="logo kiri" />
+        <p>© 2025 Susu Coklat Gembira. Semua Hak Dilindungi.</p>
+        <img src="susu.png" alt="Logo Kanan" class="logo kanan" />
+      </div>
     </footer>
 
     <a
