--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <h2>Produk Susu</h2>
       <ul>
         <li>
-          Susu Coklat Botol 250ml
+          Susu Coklat Botol 250ml (Rp. 5.000)
           <input type="number" id="jumlah" min="1" value="1" />
           <button
             class="btn-pesan"
